reflect-demo/src/snapshots/reflect_demo__test__reflect_struct_with_transform_fallback_output.snap
---
source: reflect-demo/src/test.rs
expression: "TestStructWithTransformFallback::reflect_output()"
---
{
  "name": "",
  "types": [
    {
      "kind": "struct",
      "name": "reflect_demo::test::TestStructWithTransformFallback",
      "fields": [
        {
          "name": "_f",
          "type": {
            "name": "u8"
          }
        }
      ]
    },
    {
      "kind": "primitive",
      "name": "std::sync::Arc",
      "description": "std::sync::Arc pointer type",
      "parameters": [
        {
          "name": "T"
        }
      ],
      "fallback": {
        "name": "T"
      }
    },
    {
      "kind": "primitive",
      "name": "u8",
      "description": "8-bit unsigned integer"
    }
  ]
}
