reflect-demo/src/snapshots/reflect_demo__test__reflect_struct_with_transform_output_input.snap
---
source: reflect-demo/src/test.rs
expression: "TestStructWithTransformOutput::reflect_input()"
---
{
  "name": "",
  "types": [
    {
      "kind": "struct",
      "name": "reflect_demo::test::TestStructWithTransformOutput",
      "fields": [
        {
          "name": "_f",
          "type": {
            "name": "std::sync::Arc",
            "parameters": [
              {
                "name": "u8"
              }
            ]
          }
        }
      ]
    },
    {
      "kind": "primitive",
      "name": "std::sync::Arc",
      "description": "Pointer type",
      "parameters": [
        {
          "name": "T"
        }
      ],
      "fallback": {
        "name": "T"
      }
    },
    {
      "kind": "primitive",
      "name": "u8",
      "description": "8-bit unsigned integer"
    }
  ]
}
